--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -60,12 +60,12 @@ jobs:
         run: |
           yarn build-css
 
-      - name: Build JavaScript
-        run: yarn build
-        env:
-          DATA_PROVIDERS: ${{ secrets.DATA_PROVIDERS }}
-          BLOCKNATIVE_API_KEY: ${{ secrets.BLOCKNATIVE_API_KEY }}
-          WALLET_CONNECT_PROJECT_ID: ${{ secrets.WALLET_CONNECT_PROJECT_ID }}
+      # - name: Build JavaScript
+      #   run: yarn build
+      #   env:
+      #     DATA_PROVIDERS: ${{ secrets.DATA_PROVIDERS }}
+      #     BLOCKNATIVE_API_KEY: ${{ secrets.BLOCKNATIVE_API_KEY }}
+      #     WALLET_CONNECT_PROJECT_ID: ${{ secrets.WALLET_CONNECT_PROJECT_ID }}
 
       - name: Archive App
         uses: actions/upload-artifact@v1
