--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -79,6 +79,7 @@ jobs:
         env:
           IPFS_AUTH: ${{ secrets.IPFS_AUTH }}
           IPFS_HOST: ${{ secrets.IPFS_HOST }}
+          IPFS_PORT: ${{ secrets.IPFS_PORT }}
 
       - name: Upload IPFS Release Artifact
         uses: actions/upload-artifact@v1
